--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
 
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/atom-one-dark.css">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/highlightjs-line-numbers.js/2.9.0/highlightjs-line-numbers.min.js"></script>
+
         <title>Algorithm Visualizer</title>
     </head>
 
@@ -34,7 +38,8 @@
         <div class="app">
             <div class="sidebar resizable-right">
                 <div class="algorithms">
-                    <p class="alg-name">BFS</p>
+                    <p class="alg-name">Breadth-First Search</p>
+                    <p class="alg-name">Depth-First Search</p>
                 </div>
             </div>
 
@@ -50,11 +55,10 @@
             </div>
 
             <div class="code resizable-left">
-                <div class="name-bar">Code</div>
-                <!-- Load with Js upon selecting algorithm on sidebar -->
+                
             </div>
-
-            <script src="script.js"></script>
         </div>
+
+        <script src="script.js"></script>
     </body>
 </html>
