--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        
+
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
@@ -20,10 +20,11 @@
     <body>
         <div class="navbar">
             <div class="sidebar-btn">
-                <p>O</p>
+                <button class="nav-btn"></button>
+                <!-- <p>O</p> -->
             </div>
-            <div class="current">
-                <p>Menu</p>
+            <div class="home-btn">
+                <p>Home</p>
             </div>
             <div class="controls">
                 <div class="play"><p>Play</p></div>
@@ -31,7 +32,7 @@
                 <div class="speed"><p>Speed</p></div>
             </div>
             <div class="code-btn">
-                <p>O</p>
+                <button class="nav-btn"></button>
             </div>
         </div>
 
@@ -67,6 +68,6 @@ int main() {
         </div>
 
         <script src="script.js"></script>
-        <script>hljs.initHighlightingOnLoad();hljs.initLineNumbersOnLoad();</script>
+        <script>hljs.highlightAll();hljs.initLineNumbersOnLoad();</script>
     </body>
 </html>
