Created 'base' and 'states' folder on the algorithms one. Working on adding steps to the bfs algorithm through json debug.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <body>
         <div class="navbar">
             <div class="sidebar-btn">
-                <button class="nav-btn"></button>
+                <button class="nav-btn open"></button>
                 <!-- <p>O</p> -->
             </div>
             <div class="home-btn">
@@ -32,7 +32,7 @@
                 <div class="speed"><p>Speed</p></div>
             </div>
             <div class="code-btn">
-                <button class="nav-btn"></button>
+                <button class="nav-btn open"></button>
             </div>
         </div>
 
