Added 'step' system to the controls of the visualizer. It changes the console_log content too.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,14 @@
             </div>
             <div class="controls">
                 <div class="play"><p>Play</p></div>
-                <div class="step-range"><p>Range</p></div>
+                <div class="step-range">
+                    <div class="step-prev">.</div>
+                    <div class="steps">
+                        <div class="step active"></div>
+                    </div>
+                    <div class="step-next">.</div>
+                    <div class="progress">1/1</div>
+                </div>
                 <div class="speed"><p>Speed</p></div>
             </div>
             <div class="code-btn">
