Added SVGs on navbar and improved the styling.

--- a/index.html
+++ b/index.html
@@ -21,19 +21,42 @@
         <div class="navbar">
             <div class="sidebar-btn">
                 <button class="nav-btn open"></button>
-                <!-- <p>O</p> -->
             </div>
-            <div class="home-btn">
-                <p>Home</p>
+            <div class="home-container">
+                <span class="home-btn">Home</span>
             </div>
             <div class="controls">
-                <div class="play"><p>Play</p></div>
+                <div class="play-container">
+                    <svg class="play-btn" viewBox="0 0 24.00 24.00" xmlns="http://www.w3.org/2000/svg" stroke="#d2d2d2">
+                        <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                        <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                        <g id="SVGRepo_iconCarrier"> 
+                            <path d="M16.6582 9.28638C18.098 10.1862 18.8178 10.6361 19.0647 11.2122C19.2803 11.7152 19.2803 12.2847 19.0647 12.7878C18.8178 13.3638 18.098 13.8137 16.6582 14.7136L9.896 18.94C8.29805 19.9387 7.49907 20.4381 6.83973 20.385C6.26501 20.3388 5.73818 20.0469 5.3944 19.584C5 19.053 5 18.1108 5 16.2264V7.77357C5 5.88919 5 4.94701 5.3944 4.41598C5.73818 3.9531 6.26501 3.66111 6.83973 3.6149C7.49907 3.5619 8.29805 4.06126 9.896 5.05998L16.6582 9.28638Z" stroke="#d2d2d2" stroke-width="1.8240000000000003" stroke-linejoin="round"></path> 
+                        </g>
+                    </svg>
+                </div>
                 <div class="step-range">
-                    <div class="step-prev">.</div>
+                    <div class="step-prev">
+                        <svg class="prev-btn" viewBox="0 0 24.00 24.00" xmlns="http://www.w3.org/2000/svg" stroke="#d2d2d2" stroke-width="0.00024000000000000003" transform="matrix(-1, 0, 0, 1, 0, 0)">
+                            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                            <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round" stroke="#d2d2d2CCCCCC" stroke-width="0.288"></g>
+                            <g id="SVGRepo_iconCarrier"> 
+                                <path d="M9.343 18.657a1 1 0 0 1-.707-1.707l4.95-4.95-4.95-4.95a1 1 0 0 1 1.414-1.414l5.657 5.657a1 1 0 0 1 0 1.414l-5.657 5.657a1 1 0 0 1-.707.293z"></path> 
+                            </g>
+                        </svg>
+                    </div>
                     <div class="steps">
                         <div class="step active"></div>
                     </div>
-                    <div class="step-next">.</div>
+                    <div class="step-next">
+                        <svg class="next-btn" viewBox="0 0 24.00 24.00" xmlns="http://www.w3.org/2000/svg" stroke="#d2d2d2" stroke-width="0.00024000000000000003">
+                            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                            <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round" stroke="#d2d2d2CCCCCC" stroke-width="0.288"></g>
+                            <g id="SVGRepo_iconCarrier"> 
+                                <path d="M9.343 18.657a1 1 0 0 1-.707-1.707l4.95-4.95-4.95-4.95a1 1 0 0 1 1.414-1.414l5.657 5.657a1 1 0 0 1 0 1.414l-5.657 5.657a1 1 0 0 1-.707.293z"></path> 
+                            </g>
+                        </svg>
+                    </div>
                     <div class="progress">1/1</div>
                 </div>
                 <div class="speed-container">
@@ -58,7 +81,7 @@
             <div class="sidebar resizable-right">
                 <div class="algorithms">
                     <p class="alg-name">Breadth-First Search</p>
-                    <p class="alg-name">Depth-First Search</p>
+                    <!-- <p class="alg-name">Depth-First Search</p> -->
                 </div>
             </div>
 
