--- a/index.html
+++ b/index.html
@@ -87,8 +87,16 @@
 
             <div class="content resizable-left resizable-right">
                 <div class="visualizer resizable-down">
-                    <div class="name-bar">Visualizer</div>
-                    <!-- Load with Js upon selecting algorithm on sidebar -->
+                    <svg class="visual-container" viewBox="-50 -50 100 100">
+                        <g class="node" transform="translate(-0,-0)">
+                            <circle class="node-circle" r="10"></circle>
+                            <text class="node-text">1</text>
+                        </g>
+                        <g class="node" transform="translate(-10,-10)">
+                            <circle class="node-circle" r="10"></circle>
+                            <text class="node-text">1</text>
+                        </g>
+                    </svg>                    
                 </div>
                 <div class="console-log resizable-up">
                     <div class="name-bar">Console</div>
