Added edges to the visual graph and possibility of movement on the nodes.

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
                             <circle class="node-circle" r="40"></circle>
                             <text class="node-text">1</text>
                         </g>
+                        <line class="edge" x1="0" y1="0" x2="400" y2="400"></line>
                     </svg>                    
                 </div>
                 <div class="console-log resizable-up">
