--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <div class="sidebar resizable-right">
                 <div class="algorithms">
                     <p class="alg-name">Breadth-First Search</p>
-                    <!-- <p class="alg-name">Depth-First Search</p> -->
+                    <p class="alg-name">Depth-First Search</p>
                 </div>
             </div>
 
