Added divs that change the cursor to "resize"

--- a/index.html
+++ b/index.html
@@ -83,9 +83,12 @@
                     <p class="alg-name">Breadth-First Search</p>
                     <p class="alg-name">Depth-First Search</p>
                 </div>
+                <div class="cursor-resize-v cursor-resize-r"></div>
             </div>
 
+
             <div class="content resizable-left resizable-right">
+                <div class="cursor-resize-v cursor-resize-l"></div>
                 <div class="visualizer resizable-down">
                     <svg class="visual-container" viewBox="-200 -200 400 400">
                         <g class="node" transform="translate(-0,-0)">
@@ -93,15 +96,20 @@
                             <text class="node-text">1</text>
                         </g>
                         <line class="edge" x1="0" y1="0" x2="400" y2="400"></line>
-                    </svg>                    
+                    </svg>  
+                    <div class="cursor-resize-h cursor-resize-b"></div>                  
                 </div>
                 <div class="console-log resizable-up">
+                    <div class="cursor-resize-h cursor-resize-t"></div>
                     <div class="name-bar">Console</div>
                     <!-- Load each step of the algorithm -->
                 </div>
+                <div class="cursor-resize-v cursor-resize-r"></div>
             </div>
 
+
             <div class="code resizable-left">
+                <div class="cursor-resize-v cursor-resize-l"></div>
                 <pre><code class="language-cpp initial-code">#include &lt;iostream&gt;
 using namespace std;
 
