Added dijkstra Need to make a better visualizer

--- a/algorithms/depth_first_search/depth_first_search.html
+++ b/algorithms/depth_first_search/depth_first_search.html
@@ -4,30 +4,18 @@
 using namespace std;
 
 // DFS from given source s
-void dfs(vector&lt;vector&lt;int&gt;&gt;& adj, int s) 
-{
-    // Create a stack for BFS
+void dfs(vector&lt;vector&lt;int&gt;&gt;& adj, int s) {
     stack&lt;int&gt; q;  
     
-    // Initially mark all the vertices as not visited
-    // When we push a vertex into the q, we mark it as 
-    // visited
     vector&lt;bool&gt; visited(adj.size(), false);
 
-    // Mark the source node as visited and 
-    // stack it
     visited[s] = true;
     q.push(s);
 
-    // Iterate over the stack
     while (!q.empty()) {
-        // Pop a vertex from stack and print it
         int curr = q.top();
         q.pop();
 
-        // Get all adjacent vertices of the stack 
-        // vertex curr If an adjacent has not been 
-        // visited, mark it visited and enqueue it
         for (int x : adj[curr]) {
             if (!visited[x]) {
                 visited[x] = true;
@@ -38,29 +26,22 @@ void dfs(vector&lt;vector&lt;int&gt;&gt;& adj, int s)
 }
 
 // Function to add an edge to the graph
-void addEdge(vector&lt;vector&lt;int&gt;&gt;& adj,
-                            int u, int v) 
-{
+void addEdge(vector&lt;vector&lt;int&gt;&gt;& adj, int u, int v) {
     adj[u].push_back(v);
-    adj[v].push_back(u); // Undirected Graph
+    adj[v].push_back(u); 
 }
 
-int main() 
-{
-    // Number of vertices in the graph
+int main() {
     int V = 5;
 
-    // Adjacency list representation of the graph
     vector&lt;vector&lt;int&gt;&gt; adj(V);
 
-    // Add edges to the graph
     addEdge(adj, 0, 1);
     addEdge(adj, 0, 2);
     addEdge(adj, 1, 3);
     addEdge(adj, 1, 4);
     addEdge(adj, 2, 4);
 
-    // Perform DFS traversal starting from vertex 0
     dfs(adj, 0);
 
     return 0;
