--- a/index.html
+++ b/index.html
@@ -79,11 +79,12 @@
 
         <div class="app">
             <div class="sidebar resizable-right">
+                <div class="cursor-resize-v cursor-resize-r"></div>
                 <div class="algorithms">
                     <p class="alg-name">Breadth-First Search</p>
                     <p class="alg-name">Depth-First Search</p>
+                    <p class="alg-name">Dijkstra</p>
                 </div>
-                <div class="cursor-resize-v cursor-resize-r"></div>
             </div>
 
 
@@ -102,7 +103,6 @@
                 <div class="console-log resizable-up">
                     <div class="cursor-resize-h cursor-resize-t"></div>
                     <div class="name-bar">Console</div>
-                    <!-- Load each step of the algorithm -->
                 </div>
                 <div class="cursor-resize-v cursor-resize-r"></div>
             </div>
