--- a/algorithms/breadth_first_search/breadth_first_search.html
+++ b/algorithms/breadth_first_search/breadth_first_search.html
@@ -4,31 +4,18 @@
 using namespace std;
 
 // BFS from given source s
-void bfs(vector&lt;vector&lt;int&gt;&gt;& adj, int s) 
-{
-    // Create a queue for BFS
+void bfs(vector&lt;vector&lt;int&gt;&gt;& adj, int s) {
     queue&lt;int&gt; q;  
     
-    // Initially mark all the vertices as not visited
-    // When we push a vertex into the q, we mark it as 
-    // visited
     vector&lt;bool&gt; visited(adj.size(), false);
 
-    // Mark the source node as visited and 
-    // enqueue it
     visited[s] = true;
     q.push(s);
 
-    // Iterate over the queue
     while (!q.empty()) {
-        
-        // Dequeue a vertex from queue and print it
         int curr = q.front();
         q.pop();
 
-        // Get all adjacent vertices of the dequeued 
-        // vertex curr If an adjacent has not been 
-        // visited, mark it visited and enqueue it
         for (int x : adj[curr]) {
             if (!visited[x]) {
                 visited[x] = true;
@@ -39,29 +26,22 @@ void bfs(vector&lt;vector&lt;int&gt;&gt;& adj, int s)
 }
 
 // Function to add an edge to the graph
-void addEdge(vector&lt;vector&lt;int&gt;&gt;& adj,
-                            int u, int v) 
-{
+void addEdge(vector&lt;vector&lt;int&gt;&gt;& adj, int u, int v) {
     adj[u].push_back(v);
-    adj[v].push_back(u); // Undirected Graph
+    adj[v].push_back(u); 
 }
 
-int main() 
-{
-    // Number of vertices in the graph
+int main() {
     int V = 5;
 
-    // Adjacency list representation of the graph
     vector&lt;vector&lt;int&gt;&gt; adj(V);
 
-    // Add edges to the graph
     addEdge(adj, 0, 1);
     addEdge(adj, 0, 2);
     addEdge(adj, 1, 3);
     addEdge(adj, 1, 4);
     addEdge(adj, 2, 4);
 
-    // Perform BFS traversal starting from vertex 0
     bfs(adj, 0);
 
     return 0;
